--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,7 @@
 	<title>Faqja me dy korniza</title>
 </head>
 <frameset cols="20%,80%">
-	<frame name="links" src="linqet.html">
+	<frame name="links" src="links.html">
 	<frame name="faqet" src="faqet.html">
 </frameset>
 </html>
